results/SpecGenBench/2-shot/log-UniqueCharNested-2023_11_28_03_36_55.txt
public class UniqueCharNested {

    //@ requires s != null;
    //@ ensures \result >= -1 && \result < s.length();
    public static int uniqueChar(String s) {
        //@ maintaining 0 <= i && i <= s.length();
        //@ maintaining (\forall int k; 0 <= k && k < i; s.charAt(k) != s.charAt(j));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char c1 = s.charAt(i);
            //@ maintaining i + 1 <= j && j <= s.length();
            //@ maintaining (\forall int k; i <= k && k < j; s.charAt(k) != s.charAt(i));
            //@ decreases s.length() - j;
            for (int j = i + 1; j < s.length(); ++j) {
                char c2 = s.charAt(j);
                if(c1 == c2)
                    break;
            }
            if(j == s.length())
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueCharNested.java:7: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; s.charAt(k) != s.charAt(j));
                                                                                 ^
  symbol:   variable j
  location: class UniqueCharNested
/home/max/Documents/JMLGPT/tmp/UniqueCharNested.java:19: error: cannot find symbol
            if(j == s.length())
               ^
  symbol:   variable j
  location: class UniqueCharNested
2 errors

